--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </li>
             </ul>
         </nav>
+        <div class="contacts-container">
         <a href="mailto:info@devstudio.com" class="contacts">
             <svg class="icon-mail">
                 <use href="./image/symbol-defs.svg#icon-mail"></use>
@@ -38,7 +39,8 @@
                 <use href="./image/symbol-defs.svg#icon-tel"></use>
             </svg>
             +38 096 111 11 11</a>
-        <button class="menu-button is-open" aria-expanded="false" data-menu-button>
+        </div>
+        <button class="menu-button" aria-expanded="false" data-menu-button>
             <svg 
             class="mobile-menu__icon"
             width="40" 
@@ -49,13 +51,13 @@
                 <use class="icon-menu" href="./image/symbol-defs.svg#icon-menu"></use>
             </svg>
         </button>
-        <div class="header-menu is-open" data-menu>
+        <div class="header-menu" data-menu>
             <ul class="mobile-navigation">
                 <li class="mobile-navigation__item">
-                    <a class="mobile-navigation__link" href="">Студия</a>
+                    <a class="mobile-navigation__link" href="./index.html">Студия</a>
                 </li>
                 <li class="mobile-navigation__item">
-                    <a class="mobile-navigation__link" href="">Портфолио</a>
+                    <a class="mobile-navigation__link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="mobile-navigation__item">
                     <a class="mobile-navigation__link" href="">Контакты</a>
@@ -77,7 +79,6 @@
                     <a href="" class="mobile-social-network__link">LinkedIn</a>
                 </li>
             </ul>
-
         </div>
         </div>
     </header>
