--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,69 @@
     <!--главная навигация-->
     <header>
       <div class="container header">
-      <nav class="main-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
           <ul class="navigation">
-              <li class="navigation__item">
-                  <a href="./index.html" class="navigation-link">Студия</a>
-              </li>
-              <li class="navigation__item">
-                  <a href="./portfolio.html" class="navigation-link current">Портфолио</a>
-              </li>
-              <li class="navigation__item">
-                  <a href="" class="navigation-link">Контакты</a>
-              </li>
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation-link">Студия</a>
+            </li>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation-link current">Портфолио</a>
+            </li>
+            <li class="navigation__item">
+              <a href="" class="navigation-link">Контакты</a>
+            </li>
           </ul>
-      </nav>
-      <a href="mailto:info@devstudio.com" class="contacts">
-          <svg class="icon-mail">
+        </nav>
+        <div class="contacts-container">
+          <a href="mailto:info@devstudio.com" class="contacts">
+            <svg class="icon-mail">
               <use href="./image/symbol-defs.svg#icon-mail"></use>
-          </svg>
-          info@devstudio.com</a>
-      <a href="tel:380961111111" class="contacts">
-          <svg class="icon-tel">
+            </svg>
+            info@devstudio.com</a>
+          <a href="tel:380961111111" class="contacts">
+            <svg class="icon-tel">
               <use href="./image/symbol-defs.svg#icon-tel"></use>
+            </svg>
+            +38 096 111 11 11</a>
+        </div>
+        <button class="menu-button" aria-expanded="false" data-menu-button>
+          <svg class="mobile-menu__icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+            <use class="icon-cross" href="./image/symbol-defs.svg#icon-cross"></use>
+            <use class="icon-menu" href="./image/symbol-defs.svg#icon-menu"></use>
           </svg>
-          +38 096 111 11 11</a>
+        </button>
+        <div class="header-menu" data-menu>
+          <ul class="mobile-navigation">
+            <li class="mobile-navigation__item">
+              <a class="mobile-navigation__link" href="./index.html">Студия</a>
+            </li>
+            <li class="mobile-navigation__item">
+              <a class="mobile-navigation__link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="mobile-navigation__item">
+              <a class="mobile-navigation__link" href="">Контакты</a>
+            </li>
+          </ul>
+          <a href="tel:380961111111" class="mobile-contacts__tel">+38 096 111 11 11</a>
+          <a href="mailto:info@devstudio.com" class="mobile-contacts__mail">info@devstudio.com</a>
+          <ul class="mobile-social-network">
+            <li class="mobile-social-network__item">
+              <a href="" class="mobile-social-network__link">Instagram</a>
+            </li>
+            <li class="mobile-social-network__item">
+              <a href="" class="mobile-social-network__link">Twitter</a>
+            </li>
+            <li class="mobile-social-network__item">
+              <a href="" class="mobile-social-network__link">Facebook</a>
+            </li>
+            <li class="mobile-social-network__item">
+              <a href="" class="mobile-social-network__link">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
-  </header>
+    </header>
     <main>
       <section class="project">
         <div class="container">
@@ -271,9 +308,8 @@
                               <use href="./image/symbol-defs.svg#icon-telegram"></use>
                           </svg>
               </button>
-
            </form>
-
+       <script src="./JS/menu.js"></script>
        </div>
       </div>
       </div>
