--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                 <img src="image/tekhnokriak.jpg" alt="ноутбук с открытым сайтом" width="450" class="project__card--photo">
+                 <img src="image/tekhnokriak.jpg" alt="ноутбук с открытым сайтом"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -124,7 +124,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/new-orlean-vs-gs.jpg" alt="два баскетболиста" width="450" class="project__card--photo">
+                <img src="image/new-orlean-vs-gs.jpg" alt="два баскетболиста"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -140,7 +140,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/seafood.jpg" alt="логотип ресторана seafood" width="450" class="project__card--photo">
+                <img src="image/seafood.jpg" alt="логотип ресторана seafood"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -156,7 +156,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/prime.jpg" alt="наушники" width="450" class="project__card--photo">
+                <img src="image/prime.jpg" alt="наушники"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -172,7 +172,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/boxes.jpg" alt="две коробки" width="450" class="project__card--photo">
+                <img src="image/boxes.jpg" alt="две коробки"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -188,7 +188,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/inspiration-has-o-borders.jpg" alt="монитор компьютера" width="450" class="project__card--photo">
+                <img src="image/inspiration-has-o-borders.jpg" alt="монитор компьютера"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -204,7 +204,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/limited-edition.jpg" alt="открытаю книга" width="450" class="project__card--photo">
+                <img src="image/limited-edition.jpg" alt="открытаю книга"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -220,7 +220,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div class="project__description">
-                <img src="image/lab.jpg" alt="бирка" width="450" class="project__card--photo">
+                <img src="image/lab.jpg" alt="бирка"  class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
@@ -236,7 +236,7 @@
           <li class="project__card--item">
               <a href="" class="project__card--link">
                 <div  class="project__description">
-                <img src="image/growing-business.jpg" alt="открытый ноутбук" width="450" class="project__card--photo">
+                <img src="image/growing-business.jpg" alt="открытый ноутбук" class="project__card--photo">
                 <div class="project__description-overlay">
                   <p class="project__description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
